--- a/SimpleCustomerApp/pom.xml
+++ b/SimpleCustomerApp/pom.xml
@@ -7,4 +7,12 @@
   <version>1.0-SNAPSHOT</version>
   <name>SimpleCustomerApp</name>
   <url>http://maven.apache.org</url>
+  
+  <plugins>
+    <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>2.2</version>
+</plugin>
+    </plugins>
 </project>
